[package]
name = "nostd"
version = "0.1.3"
description = "Missing std types for no_std development"
authors = [
  "Jeeyong Um <conr2d@proton.me>",
  "Jungyong Um <ian.jungyong.um@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nostd-rs/nostd.git"
documentation = "https://docs.rs/nostd"
keywords = ["no_std"]
categories = ["no-std"]
exclude = [".github"]

[package.metadata.docs.rs]
features = ["hashbrown", "io"]

[dependencies]
hashbrown = { version = "0.15", optional = true }
memchr = { version = "2", default-features = false, optional = true }

[dev-dependencies]
nostd = { path = ".", features = ["io"] }

[features]
default = ["alloc"]
std = ["alloc"]
alloc = ["memchr?/alloc"]
io = ["memchr"]
